binding/python/graphiti.py

"""
graphiti.py
Company: Orbit Research 
Date: 08-12-2025
@brief: High-level Python wrapper for the Graphiti C API.

Details:
Provides pythonic classes and helpers wrapping the Graphiti C ABI. Intended for
Python 3.8+ and requires the compiled Graphiti shared library accessible at runtime.

License: Distributed under GNU General Public License V3.0
Copyright (c) 2025 Orbit Research
"""

from ctypes import (
    CDLL, c_void_p, c_bool, c_int, c_char_p,
    POINTER, Structure, c_uint8, c_size_t, c_uint16,
    byref, create_string_buffer, cast, 
)
from typing import Optional, List, Dict, Union
import os

class DisplayStatusEvent_C(Structure):
    _fields_ = [
        ("data", POINTER(c_uint8)),
        ("length", c_int),
        ("has_value", c_bool)
    ]

class KeyEvent_C(Structure):
    _fields_ = [
        ("keys", POINTER(c_char_p)),
        ("count", c_int),
        ("has_value", c_bool)
    ]

class PinInfo_C(Structure):
    _fields_ = [
        ("rowID", c_int),
        ("columnID", c_int),
        ("height", c_int),
        ("blinkRate", c_int)
    ]

class DrawEvent_C(Structure):
    _fields_ = [
        ("pins", POINTER(PinInfo_C)),
        ("length", c_int),
        ("has_value", c_bool)
    ]

class Graphiti:
    """High-level Python wrapper around the Graphiti C API.

    This class loads the compiled Graphiti C library via ctypes and exposes
    convenient methods for connecting, sending commands, and reading events.
    """
    # @function __init__
    # @brief Load the Graphiti DLL and prepare ctypes function signatures.
    # @param self The Graphiti instance.
    # @return None. Raises RuntimeError if the DLL cannot be loaded.
    def __init__(self):
        """Load the Graphiti DLL and prepare ctypes function signatures.

        Raises RuntimeError if the DLL cannot be loaded.
        """
        dll_dir = os.path.dirname(os.path.abspath(__file__))
        #print("dll_dir: " + dll_dir)
        os.add_dll_directory(dll_dir)
        dll_path = os.path.join(dll_dir, "libGraphiti_C.dll")
        if not os.path.exists(dll_path):
            dll_path = os.path.join(dll_dir, "Graphiti_C.dll")
        try:
            self._lib = CDLL(dll_path,winmode=0)
        except Exception as e:
            raise RuntimeError(f"Failed to load DLL: {e}")
        self._setup_types()
        self._handle = None
        
    # @function _setup_types
    # @brief Set up ctypes argument and return types for all Graphiti C API functions.
    # @param self The Graphiti instance.
    # @return None
    def _setup_types(self):
        # Handle Management
        self._lib.graphiti_create.restype = c_void_p
        self._lib.graphiti_createWithConnection.argtypes = [c_void_p]
        self._lib.graphiti_createWithConnection.restype = c_void_p
        self._lib.graphiti_destroy.argtypes = [c_void_p]
        self._lib.graphiti_destroy.restype = None
        self._lib.graphiti_setConnection.argtypes = [c_void_p, c_void_p]
        self._lib.graphiti_setConnection.restype = None

        # VCP calls
        self._lib.graphiti_startUpVCP.argtypes = [c_void_p, c_char_p, c_bool, c_bool]
        self._lib.graphiti_startUpVCP.restype = c_bool
        self._lib.graphiti_shutDownVCP.argtypes = [c_void_p, c_bool, c_bool]
        self._lib.graphiti_shutDownVCP.restype = None

        # HID calls
        self._lib.graphiti_startUpHID.argtypes = [c_void_p, c_uint16, c_uint16, c_bool, c_bool]
        self._lib.graphiti_startUpHID.restype = c_bool
        self._lib.graphiti_shutDownHID.argtypes = [c_void_p, c_bool, c_bool]
        self._lib.graphiti_shutDownHID.restype = None

        # Extension
        self._lib.graphiti_index.argtypes = [c_void_p, c_int, c_int]
        self._lib.graphiti_index.restype = c_int
        self._lib.graphiti_setPin.argtypes = [c_void_p, c_int, c_int, c_int]
        self._lib.graphiti_setPin.restype = None
        self._lib.graphiti_clearScreen.argtypes = [c_void_p]
        self._lib.graphiti_clearScreen.restype = None
        self._lib.graphiti_sleep.argtypes = [c_void_p, c_int]
        self._lib.graphiti_setPin.restype = None

        # Response Thread
        self._lib.graphiti_startResponseThread.argtypes = [c_void_p]
        self._lib.graphiti_startResponseThread.restype = None
        self._lib.graphiti_stopResponseThread.argtypes = [c_void_p]
        self._lib.graphiti_stopResponseThread.restype = None

        # Event handling
        self._lib.graphiti_getNextOutputEvent.argtypes = [c_void_p, c_char_p, c_size_t]
        self._lib.graphiti_getNextOutputEvent.restype = None
        self._lib.graphiti_getNextDisplayStatusEvent.argtypes = [c_void_p]
        self._lib.graphiti_getNextDisplayStatusEvent.restype = DisplayStatusEvent_C
        self._lib.graphiti_getNextKeyEvent.argtypes = [c_void_p]
        self._lib.graphiti_getNextKeyEvent.restype = KeyEvent_C
        self._lib.graphiti_getNextGestureEvent.argtypes = [c_void_p, c_char_p, c_size_t]
        self._lib.graphiti_getNextGestureEvent.restype = None
        self._lib.graphiti_getNextDrawEvent.argtypes = [c_void_p]
        self._lib.graphiti_getNextDrawEvent.restype = DrawEvent_C

        # API calls
        self._lib.graphiti_sendACK.argtypes = [c_void_p]
        self._lib.graphiti_sendACK.restype = None
        self._lib.graphiti_sendNACK.argtypes = [c_void_p]
        self._lib.graphiti_sendNACK.restype = None

        self._lib.graphiti_getSoftwareVersion.argtypes = [c_void_p]
        self._lib.graphiti_getSoftwareVersion.restype = None
        self._lib.graphiti_getHardwareVersion.argtypes = [c_void_p]
        self._lib.graphiti_getHardwareVersion.restype = None
        self._lib.graphiti_getSerialNumber.argtypes = [c_void_p]
        self._lib.graphiti_getSerialNumber.restype = None
        self._lib.graphiti_getBatteryStatus.argtypes = [c_void_p]
        self._lib.graphiti_getBatteryStatus.restype = None
        self._lib.graphiti_getResolutionInformation.argtypes = [c_void_p]
        self._lib.graphiti_getResolutionInformation.restype = None
        self._lib.graphiti_getDeviceOrientation.argtypes = [c_void_p]
        self._lib.graphiti_getDeviceOrientation.restype = None
        self._lib.graphiti_getHeightInformation.argtypes = [c_void_p]
        self._lib.graphiti_getHeightInformation.restype = None
        self._lib.graphiti_getDeviceName.argtypes = [c_void_p]
        self._lib.graphiti_getDeviceName.restype = None

        # Display commands
        self._lib.graphiti_updateDisplay.argtypes = [c_void_p, POINTER(c_uint8), c_int]
        self._lib.graphiti_updateDisplay.restype = None
        self._lib.graphiti_setDisplay.argtypes = [c_void_p]
        self._lib.graphiti_setDisplay.restype = None
        self._lib.graphiti_clearDisplay.argtypes = [c_void_p]
        self._lib.graphiti_clearDisplay.restype = None
        self._lib.graphiti_updateSinglePixel.argtypes = [c_void_p, c_int, c_int, c_int, c_int]
        self._lib.graphiti_updateSinglePixel.restype = None
        self._lib.graphiti_updateSingleRow.argtypes = [c_void_p, c_int, POINTER(c_uint8), c_int]
        self._lib.graphiti_updateSingleRow.restype = None
        self._lib.graphiti_updateSingleColumn.argtypes = [c_void_p, c_int, POINTER(c_uint8), c_int]
        self._lib.graphiti_updateSingleColumn.restype = None

        # Status calls
        self._lib.graphiti_getAllPixelsPositionStatus.argtypes = [c_void_p]
        self._lib.graphiti_getAllPixelsPositionStatus.restype = None
        self._lib.graphiti_getSinglePixelPositionStatus.argtypes = [c_void_p, c_int, c_int]
        self._lib.graphiti_getSinglePixelPositionStatus.restype = None
        self._lib.graphiti_getSingleRowPixelPositionStatus.argtypes = [c_void_p, c_int]
        self._lib.graphiti_getSingleRowPixelPositionStatus.restype = None
        self._lib.graphiti_getSingleColumnPixelPositionStatus.argtypes = [c_void_p, c_int]
        self._lib.graphiti_getSingleColumnPixelPositionStatus.restype = None

        self._lib.graphiti_showMessage.argtypes = [c_void_p, c_char_p, POINTER(c_uint8), c_int, c_int]
        self._lib.graphiti_showMessage.restype = None
        self._lib.graphiti_setCursor.argtypes = [c_void_p, c_int, c_int, c_int, c_int, c_int]
        self._lib.graphiti_setCursor.restype = None
        self._lib.graphiti_sendImageInterruptible.argtypes = [c_void_p, c_char_p, c_char_p]
        self._lib.graphiti_sendImageInterruptible.restype = None
        self._lib.graphiti_sendImageBlocking.argtypes = [c_void_p, c_char_p, c_char_p]
        self._lib.graphiti_sendImageBlocking.restype = None

        self._lib.graphiti_setKeyEvent.argtypes = [c_void_p, c_bool]
        self._lib.graphiti_setKeyEvent.restype = None
        self._lib.graphiti_setTouchEvent.argtypes = [c_void_p, c_bool]
        self._lib.graphiti_setTouchEvent.restype = None
        self._lib.graphiti_getLastTouchPointStatus.argtypes = [c_void_p]
        self._lib.graphiti_getLastTouchPointStatus.restype = None
        self._lib.graphiti_vibratorControlCommand.argtypes = [c_void_p, c_int, c_int, c_int]
        self._lib.graphiti_vibratorControlCommand.restype = None

        self._lib.graphiti_getDateAndTime.argtypes = [c_void_p]
        self._lib.graphiti_getDateAndTime.restype = None
        self._lib.graphiti_setDateAndTime.argtypes = [c_void_p, c_int, c_int, c_int, c_int, c_int, c_int]
        self._lib.graphiti_setDateAndTime.restype = None

    # @function graphiti_create
    # @brief Create a native Graphiti handle and store it on this instance.
    # @param self The Graphiti instance.
    # @return None
    def graphiti_create(self):
        self._handle = self._lib.graphiti_create()

    # @function __enter__
    # @brief Context manager enter: return self.
    # @param self The Graphiti instance.
    # @return self
    def __enter__(self):
        return self

    # @function __exit__
    # @brief Context manager exit: destroy native handle if present.
    # @param self The Graphiti instance.
    # @param exc_type Exception type.
    # @param exc_val Exception value.
    # @param exc_tb Exception traceback.
    # @return None
    def __exit__(self, exc_type, exc_val, exc_tb):
        self._lib.graphiti_destroy(self._handle)

    # VCP control
    # @function start_vcp
    # @brief Start a VCP (serial) connection to the device.
    # @param self The Graphiti instance.
    # @param port Serial port string.
    # @param key_events Enable key events (default True).
    # @param touch_events Enable touch events (default True).
    # @return True on success, False on failure.
    def start_vcp(self, port: str, key_events: bool = True, touch_events: bool = True) -> bool:
        return self._lib.graphiti_startUpVCP(
            self._handle,
            port.encode('ascii'),
            c_bool(key_events),
            c_bool(touch_events)
        )

    # @function shutdown_vcp
    # @brief Shutdown a previously opened VCP connection.
    # @param self The Graphiti instance.
    # @param key_events Enable key events (default True).
    # @param touch_events Enable touch events (default True).
    # @return None
    def shutdown_vcp(self, key_events: bool = True, touch_events: bool = True):
        self._lib.graphiti_shutDownVCP(
            self._handle,
            c_bool(key_events),
            c_bool(touch_events)
        )
